--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timer</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -31,7 +31,7 @@
       </div>
     </div>
     </main>
-      <script type="module" src="/js/1-timer.js"></script>
+      <script type="module" src="./js/1-timer.js"></script>
   </body>
 </html>
 
