--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
 <header class="header">
@@ -13,10 +13,10 @@
       </a>
       <ul class="nav-list">
         <li class="nav-item">
-          <a class="nav-link {=$highlight-act}" href="/1-timer.html">Timer</a>
+          <a class="nav-link {=$highlight-act}" href="./1-timer.html">Timer</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {=$highlight-curr}" href="/2-snackbar.html">Snackbar</a>
+          <a class="nav-link {=$highlight-curr}" href="./2-snackbar.html">Snackbar</a>
         </li>
       </ul>
     </nav>
